# CodeABC

./: .env.example  .gitignore  README.md  README_CN.md  pyproject.toml
.github/workflows/: ci.yml
backend/: app.py  models.py
backend/prompts/: annotate.py  overview.py
backend/routers/: analyze.py  project.py
backend/services/: cache.py  github_clone.py  llm.py  scanner.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AnnotationTooltip.tsx  ApiKeyModal.tsx  CodeViewer.tsx  UploadZone.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: FileView.tsx  Home.tsx  Overview.tsx
frontend/src/stores/: project.ts
