[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeabc"
version = "0.1.0"
description = "AI-powered code reader for non-programmers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Yufeng He", email = "40085740+he-yufeng@users.noreply.github.com" }]
keywords = ["code-reader", "ai", "education", "non-programmer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "litellm>=1.40.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
